--- a/css/index.css
+++ b/css/index.css
@@ -3,8 +3,8 @@
 
  -- Strong Colors --
 #FEC672 - Maximum Yellow Red
-#5C93AD - Blue Green
-#91C346 - Yellow Green
+#447188 - Teal Blue
+#4F6C23 - Dark Olive Green
 
  -- Weak Colors --
 #F4E1E3 - Lavender Blush
@@ -13,19 +13,22 @@
 */
 
 html {
-  background-color: white;
+  background-color: #447188;
 }
 
 body {
   width: 100%;
   max-width: 500px;
+  background-color: #E2E2F3;
   font-family: Arial, Helvetica, sans-serif;
-  margin: 10px auto auto auto;
+  margin: auto;
+  padding: 15px;
+  border-radius: 0 0 10px 10px;
 }
 
 header,
 footer {
-  background-color: #447188;
+  background-color: #4F6C23;
   border-radius: 10px;
   box-shadow: 0px 0px 30px 0px gray;
 }
