--- a/css/small.css
+++ b/css/small.css
@@ -23,6 +23,7 @@ body {
   background-color: #E2E2F3;
   font-family: "Yeseva One", Helvetica, sans-serif;
   margin: auto;
+  margin-bottom: 50px;
   padding: 15px;
   border-radius: 0 0 10px 10px;
 }
