--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -5,7 +5,9 @@
   /* Strong Colors */
   --orange: #FF6B35;
   --blue: #1A659E;
-  --darkblue: #004E89;
+  --darkblue: #1E3248;
+  --turquoise: #03989e;
+  --marigold: #EB9E33;
 
   /* Light Colors */
   --peach: #F7C59F;
@@ -13,10 +15,11 @@
 }
 
 
+
 /* ----- HEADER STYLING ----- */
 
 html {
-  background-color: var(--beige);
+  background-color: whitesmoke;
   padding: 0;
 }
 
@@ -41,7 +44,7 @@ header {
 }
 
 #nav-top {
-  background-color: var(--peach);
+  background-color: var(--darkblue);
   grid-column: 1/4;
   grid-row: 1;
   display: grid;
@@ -61,6 +64,16 @@ header {
   grid-column: 2/4;
 }
 
+#date {
+  color: white;
+}
+
+#date2 {
+  grid-row: 2;
+  margin: 0 15px 5px;
+  padding: 0;
+}
+
 nav button {
   background: transparent;
   border: none;
@@ -71,11 +84,23 @@ nav button {
   font-size: 2rem;
   margin-left: auto;
   margin-right: 1vw;
+  color: white;
+}
+
+#stack-top:hover {
+  color: var(--marigold);
 }
 
 #stack-bottom {
-  font-size: 1.5rem;
+  font-size: 1.7rem;
   margin: auto 10px 10px auto;
+  color: white;
+  grid-column: 2;
+  grid-row: 1/3;
+}
+
+#stack-bottom:hover {
+  color: var(--marigold);
 }
 
 nav ul {
@@ -86,63 +111,174 @@ nav ul {
 
 nav ul li a {
   text-decoration: none;
-  color: var(--darkblue);
-  font-size: 110%;
+  color: white;
+  font-size: 120%;
+  transition: ease 0.1s;
 }
 
 #main-nav {
   display: flex;
-  align-items: center;
-  padding: .5rem 0;
 }
 
 #main-nav li {
+  margin: auto;
   padding: 0 4vw;
 }
 
+#main-nav li a:hover {
+  color: var(--marigold);
+}
+
 #lower {
-  background-color: whitesmoke;
-  grid-column: 3;
+  background-color: var(--turquoise);
   display: grid;
   grid-template-columns: 1fr 20%;
   z-index: 2;
+  position: absolute;
+  top: 3rem;
+  right: 0;
+  width: 60vw;
 }
 
 #lower-nav {
   grid-column: 1;
   margin: 0;
-  padding: 7px;
+  padding: 7px 7px 0;
+
 }
 
 #lower-nav li {
+  margin: 0;
   padding: .5rem 2vw;
-  border-bottom: 1px solid rgba(0,0,0,.3);
+  border-bottom: 1px solid #ccc;
 }
 
 #lower-nav li:last-of-type {
   border-bottom: none;
 }
 
-.hidden {
-  display: none;
+#lower-nav li a:hover {
+  color: var(--marigold);
 }
 
-.large {
-  display: none;
+.social img {
+  width: 3rem;
+  margin: 0 5px;
 }
 
+#lower-nav .social img {
+  width: 2rem;
+  position: relative;
+  top: 2px;
+}
 
-/* ----- MAIN BODY STYLES ----- */
+.hidden { display: none; }
+.large { display: none; }
+
+
+
+/* ----- MAIN BODY STYLING ----- */
+
+#main {
+  margin: 0;
+}
+
+section {
+  margin-bottom: 2px;
+  background-color: #ccc;
+  height: 300px;
+}
+
+section p {
+  margin: 0;
+  padding: 10px;
+}
 
 #banner {
   background-color: #ccc;
-  width: 100%;
-  height: 400px;
-  position: absolute;
-  top: 3rem;
+  height: 300px;
   z-index: 1;
 }
 
 #banner p {
-  margin: 300px 20px 0;
+  padding: 200px 30px 50px;
+}
+
+#showcase {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 40px 1fr;
+}
+
+#showcase p {
+  grid-column: 1/4;
+  grid-row: 1;
+}
+
+#showcase div {
+  margin: 10px;
+  min-height: 20px;
+  background-color: rgba(0,0,0,.5);
+}
+
+#events {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 40px 1fr 1fr;
+}
+
+#events div {
+  margin: 10px;
+  min-height: 20px;
+  background-color: rgba(0,0,0,.5);
+}
+
+#events p { grid-column: 1/4; grid-row: 1; }
+
+#event1 { grid-column: 1; grid-row: 2; }
+#event2 { grid-column: 2; grid-row: 2; }
+#event3 { grid-column: 3; grid-row: 2; }
+#event4 { grid-column: 1; grid-row: 3; }
+#event5 { grid-column: 2; grid-row: 3; }
+#event6 { grid-column: 3; grid-row: 3; }
+
+
+
+/* ----- FOOTER STYLING ----- */
+
+footer {
+  background-color: whitesmoke;
+}
+
+#main-footer {
+  margin: 1rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+}
+
+#logo-footer {
+  width: 140px;
+  margin: auto;
+}
+
+#first-footer {
+  margin: auto;
+  text-align: center;
+}
+
+#second-footer {
+  margin: auto;
+  text-align: center;
+}
+
+#base-footer {
+  width: 100%;
+  padding: .5rem;
+  background-color: var(--darkblue);
+  text-align: center;
+}
+
+#base-footer p {
+  color: white;
 }
