--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -18,15 +18,89 @@
 
   header,
   #nav-top {
-    grid-template-columns: 240px 10% 1fr;
+    grid-template-columns: 240px 10px 1fr;
   }
 
   #nav-top nav {
     grid-column: 3;
   }
 
-  #nav-top nav ul li {
-    padding: 0 3vw;
+  #nav-top nav ul {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
   }
+
+  #nav-top nav ul li {
+    padding: 0;
+  }
+
+  
+  /* ----- MAIN STYLING ----- */
+
+  main {
+    grid-template-columns: 2fr 3fr 2fr;
+    grid-template-rows: 1fr 1fr 1fr;
+  }
+
+  section {
+    margin: 2px;
+    height: auto;
+  }
+
+  #banner {
+    grid-column: 1/3;
+    grid-row: 1;
+  }
+
+  #showcase {
+    grid-column: 3;
+    grid-row: 1/3;
+    grid-template-columns: 1fr;
+    grid-template-rows: 40px 1fr 1fr 1fr;
+  }
+
+  #bus1 { grid-row: 2; }
+  #bus2 { grid-row: 3; }
+  #bus3 { grid-row: 4; }
+
+  #call-action {
+    grid-column: 2;
+    grid-row: 2;
+  }
+
+  #events {
+    grid-column: 1;
+    grid-row: 2/4;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 40px 1fr 1fr 1fr;
+  }
+
+  #events p { grid-column: 1/3; grid-row: 1; }
+
+  #event1 { grid-column: 1; grid-row: 2; }
+  #event2 { grid-column: 2; grid-row: 2; }
+  #event3 { grid-column: 1; grid-row: 3; }
+  #event4 { grid-column: 2; grid-row: 3; }
+  #event5 { grid-column: 1; grid-row: 4; }
+  #event6 { grid-column: 2; grid-row: 4; }
+
+  #join-now {
+    grid-column: 2;
+    grid-row: 3;
+  }
+
+  #weather {
+    grid-column: 3;
+    grid-row: 3;
+  }
+
+
+
+    /* ----- FOOTER STYLING ----- */
+
+    #main-footer {
+      width: 80%;
+      margin: 1rem auto;
+    }
   
   } /*end large */
