--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -17,28 +17,67 @@
 
   #lower {
     grid-template-columns: 1fr 10%;
-    float: right;
+    width: 65vw;
+  }
+
+  #date2 {
+    margin-top: 12px;
+    margin-left: 3vw;
   }
 
   #lower-nav {
-    width: 100%;
-    margin: 5px;
-    text-align: justify;
+    margin: 0px;
+    padding: 0;
   }
 
   #lower-nav li {
     display: inline;
     border-bottom: none;
-    border-right: 1px solid rgba(0,0,0,.3);
+    border-right: 1px solid #ccc;
   }
 
   #lower-nav li:last-of-type {
     border-right: none;
   }
 
+  #lower-nav .social img {
+    top: 10px;
+  }
+
   #stack-bottom {
     margin: auto;
-    align-content: center;
   }
+
+
+
+  /* ----- MAIN STYLING ----- */
+
+  main {
+    display: grid;
+    grid-template-columns: 3fr 2fr;
+    grid-template-rows: auto;
+  }
+
+  #banner { grid-column: 1/3; grid-row: 1; }
+  #call-action { grid-column: 1/3; grid-row: 2; }
+  #showcase { grid-column: 1/3; grid-row: 3; }
+  #join-now { grid-column: 1; grid-row: 4; margin-right: 2px;}
+  #weather { grid-column: 2; grid-row: 4; }
+  #events { grid-column: 1/3; grid-row: 5; }
+
+
+
+  /* ----- FOOTER STYLING ----- */
+
+  #main-footer {
+    grid-template-columns: 1fr 2fr 2fr;
+    grid-template-rows: auto;
+  }
+
+  #first-footer {
+    margin-left: 1rem;
+    text-align: start;
+  }
+
 
 } /*end medium */
