--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -27,11 +27,11 @@ body {
   margin: 0;
 }
 
-h1, h2, h3, h4, h5, h6, a {
+h1, h2, h3, h5, h6, a, button {
   font-family: 'Josefin Sans', sans-serif;
 }
 
-p {
+p, h4 {
   font-family: 'Heebo', sans-serif;
 }
 
@@ -41,6 +41,10 @@ header {
   display: grid;
   grid-template-columns: 140px 3% 1fr;
   grid-template-rows: auto;
+}
+
+h2 {
+  margin: 0;
 }
 
 #nav-top {
@@ -57,6 +61,7 @@ header {
   position: absolute;
   left: 10px;
   z-index: 2;
+  transition: ease 0.1s;
 }
 
 #nav-top nav {
@@ -71,7 +76,6 @@ header {
 #date2 {
   grid-row: 2;
   margin: 0 15px 5px;
-  padding: 0;
 }
 
 nav button {
@@ -186,39 +190,105 @@ nav ul li a {
 section {
   margin-bottom: 2px;
   background-color: #ccc;
-  height: 300px;
+  height: auto;
 }
 
-section p {
+section h3 {
   margin: 0;
   padding: 10px;
 }
 
+.join {
+  border: 2px solid rgba(0,0,0,.5);
+  border-radius: 10px;
+  color: var(--darkblue);
+  font-size: 1rem;
+  font-weight: bold;
+  background-color: whitesmoke;
+  padding: 8px 15px 6px;
+  transition: ease 0.1s;
+}
+
+.join:hover {
+  color: var(--marigold);
+  background-color: var(--darkblue);
+  border: 2px solid var(--darkblue);
+}
+
 #banner {
-  background-color: #ccc;
+  background-image: url("../images/arlington_downtown.jpg");
+  background-size: cover;
+  background-position: center;
   height: 300px;
   z-index: 1;
 }
 
-#banner p {
-  padding: 200px 30px 50px;
+#banner h1 {
+  position: relative;
+  color: whitesmoke;
+  margin: 0;
+  padding: 180px 30px 0;
+  text-shadow: 0 0 15px black;
+  transition: ease 0.2s;
+}
+
+#join {
+  position: absolute;
+  right: 10%;
+  top: 280px;
 }
 
 #showcase {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 40px 1fr;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto 1fr;
 }
 
-#showcase p {
+#showcase h3 {
+  margin: 0;
+  padding: 12px 12px;
+  font-size: 130%;
   grid-column: 1/4;
   grid-row: 1;
+  border-bottom: 2px solid var(--darkblue);
 }
 
 #showcase div {
-  margin: 10px;
+  margin: 5px;
+  padding: 8px;
   min-height: 20px;
-  background-color: rgba(0,0,0,.5);
+  background-color: whitesmoke;
+}
+
+#showcase h4 {
+  text-align: center;
+  margin: 0;
+  font-size: 140%;
+}
+
+#showcase p {
+  margin: 0;
+  text-align: center;
+}
+
+.more {
+  display: none;
+}
+
+#bus3 {
+  display: none
+}
+
+#join-now {
+  background-image: url("../images/street_sign.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 300px;
+}
+
+#join2 {
+  margin: 200px 20% 0 0;
+  float: right;
 }
 
 #events {
@@ -233,7 +303,7 @@ section p {
   background-color: rgba(0,0,0,.5);
 }
 
-#events p { grid-column: 1/4; grid-row: 1; }
+#events h3 { grid-column: 1/4; grid-row: 1; }
 
 #event1 { grid-column: 1; grid-row: 2; }
 #event2 { grid-column: 2; grid-row: 2; }
@@ -281,4 +351,39 @@ footer {
 
 #base-footer p {
   color: white;
+}
+
+
+
+@media only screen and (max-width: 350px) {
+
+  #logo {
+    max-width: 80px;
+  }
+
+  header, #nav-top {
+    grid-template-columns: 90px 1% 1fr;
+  }
+
+  nav ul li a {
+    font-size: 100%;
+  }
+
+  #showcase {
+    height: auto;
+    grid-template-columns: 1fr;
+  }
+
+  #bus2, #bus3 {
+    display: none
+  }
+
+  .more {
+    display: inherit;
+    position: relative;
+    float: right;
+    bottom: 0;
+    margin: 10px;
+  }
+
 }
