--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -16,7 +16,7 @@
 
 
 
-/* ----- HEADER STYLING ----- */
+/* ----- ----- ----- ----- HEADER STYLING ----- ----- ----- ----- */
 
 html {
   background-color: whitesmoke;
@@ -134,7 +134,7 @@ nav ul li a {
 }
 
 #lower {
-  background-color: var(--turquoise);
+  background-color: gray;
   display: grid;
   grid-template-columns: 1fr 20%;
   z-index: 2;
@@ -181,7 +181,9 @@ nav ul li a {
 
 
 
-/* ----- MAIN BODY STYLING ----- */
+/* ----- ----- ----- ----- MAIN BODY STYLING ----- ----- ----- ----- */
+
+/* ----- GENERAL ----- */
 
 #main {
   margin: 0;
@@ -195,11 +197,21 @@ section {
 
 section h3 {
   margin: 0;
-  padding: 10px;
+  padding: 30px 0 5px;
+  font-size: 120%;
+  border-bottom: 2px solid var(--darkblue);
+  background-color: whitesmoke;
+  text-align: center;
 }
 
+section h2 {
+  text-align: center;
+}
+
+/* ----- BANNER SECTION ----- */
+
 .join {
-  border: 2px solid rgba(0,0,0,.5);
+  border: 4px solid rgba(0,0,0,.8);
   border-radius: 10px;
   color: var(--darkblue);
   font-size: 1rem;
@@ -212,7 +224,7 @@ section h3 {
 .join:hover {
   color: var(--marigold);
   background-color: var(--darkblue);
-  border: 2px solid var(--darkblue);
+  border: 4px solid var(--darkblue);
 }
 
 #banner {
@@ -238,31 +250,39 @@ section h3 {
   top: 280px;
 }
 
+/* ----- CALL TO ACTION SECTION ----- */
+
+#call-action h2 {
+  margin: auto;
+}
+
+
+/* ----- SHOWCASE SECTION ----- */
+
 #showcase {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto 1fr;
+  background-image: url("../images/3fingers.png");
+  background-size: cover;
+  background-position: center;
+  padding-bottom: 20px;
 }
 
 #showcase h3 {
-  margin: 0;
-  padding: 12px 12px;
-  font-size: 130%;
   grid-column: 1/4;
   grid-row: 1;
-  border-bottom: 2px solid var(--darkblue);
 }
 
 #showcase div {
-  margin: 5px;
+  margin: 10px;
   padding: 8px;
-  min-height: 20px;
   background-color: whitesmoke;
 }
 
 #showcase h4 {
   text-align: center;
-  margin: 0;
+  margin: 0 0 10px 0;
   font-size: 140%;
 }
 
@@ -279,6 +299,8 @@ section h3 {
   display: none
 }
 
+/* ----- JOIN-NOW SECTION ----- */
+
 #join-now {
   background-image: url("../images/street_sign.jpg");
   background-size: cover;
@@ -291,30 +313,119 @@ section h3 {
   float: right;
 }
 
+/* ----- EVENTS SECTION ----- */
+
 #events {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 40px 1fr 1fr;
+  background-image: url("../images/marysville.jpg");
+  background-size: cover;
+  padding: 0 0 15px;
 }
 
 #events div {
   margin: 10px;
-  min-height: 20px;
-  background-color: rgba(0,0,0,.5);
+  background-color: rgba(0,0,0,.8);
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  padding: 10px;
 }
 
-#events h3 { grid-column: 1/4; grid-row: 1; }
+#events div:hover {
+  background-color: rgba(0,0,0,1);
+  transition: ease 0.3s;
+}
 
+#events h6 {
+  color: white;
+  text-align: center;
+  font-size: larger;
+  margin: auto;
+  grid-row: 1;
+}
+
+#events div p {
+  color: white;
+  text-align: center;
+  margin: auto;
+  grid-row: 2;
+}
+
+/* 
 #event1 { grid-column: 1; grid-row: 2; }
 #event2 { grid-column: 2; grid-row: 2; }
 #event3 { grid-column: 3; grid-row: 2; }
 #event4 { grid-column: 1; grid-row: 3; }
 #event5 { grid-column: 2; grid-row: 3; }
-#event6 { grid-column: 3; grid-row: 3; }
+#event6 { grid-column: 3; grid-row: 3; } */
+
+/* ----- WEATHER SECTION ----- */
+
+#weather {
+  background-color: var(--darkblue);
+  height: 300px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 60px 2fr 1fr 1fr;
+}
+
+#weather h2 {
+  color: whitesmoke;
+  margin: auto;
+  grid-row: 1;
+  grid-column: 1/3;
+}
+
+#w_img {
+  width: 70%;
+  max-width: 115px;
+  margin: auto 1rem auto auto;
+  grid-row: 2;
+  grid-column: 1;
+}
+
+.temp {
+  margin: auto auto auto 1rem;
+  grid-row: 2;
+  grid-column: 2;
+}
+
+#temp {
+  color: whitesmoke;
+  font-size: 300%;
+}
+
+#temp_label {
+  color: whitesmoke;
+  font-size: 200%;
+}
+
+#weather h4 {
+  margin: auto;
+  padding: 0 2rem;
+  width: 70%;
+  text-align: right;
+  font-size: 150%;
+  color: whitesmoke;
+  border-bottom: 2px solid whitesmoke;
+  grid-row: 3;
+  grid-column: 1/3;
+}
+
+#weather p {
+  color: whitesmoke;
+  font-size: 120%;
+}
+
+.label p {
+  text-align: right;
+}
+
+.data p {
+  text-align: center;
+}
 
 
 
-/* ----- FOOTER STYLING ----- */
+/* ----- ----- ----- ----- FOOTER STYLING ----- ----- ----- ----- */
 
 footer {
   background-color: whitesmoke;
@@ -374,7 +485,8 @@ footer {
     grid-template-columns: 1fr;
   }
 
-  #bus2, #bus3 {
+  #bus2, #bus3,
+  #event3, #event4, #event5, #event6 {
     display: none
   }
 
@@ -384,6 +496,22 @@ footer {
     float: right;
     bottom: 0;
     margin: 10px;
+  }
+
+  #weather {
+    grid-template-rows: 60px 1fr 1fr 1fr;
+  }
+
+  #weather p {
+    font-size: 5vw;
+  }
+
+  #temp {
+    font-size: 12vw;
+  }
+
+  #temp_label {
+    font-size: 8vw;
   }
 
 }
