--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -60,7 +60,8 @@
     grid-column: 3;
     grid-row: 1/3;
     grid-template-columns: 1fr;
-    grid-template-rows: 40px 1fr 1fr 1fr;
+    grid-template-rows: 60px 1fr 1fr 1fr;
+    padding-bottom: 5px;
   }
 
   #bus1 { grid-row: 2; }
@@ -76,10 +77,9 @@
     grid-column: 1;
     grid-row: 2/4;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 40px 1fr 1fr 1fr;
+    grid-template-rows: 60px 1fr 1fr 1fr;
   }
 
-  #events p { grid-column: 1/3; grid-row: 1; }
 
   #event1 { grid-column: 1; grid-row: 2; }
   #event2 { grid-column: 2; grid-row: 2; }
@@ -96,6 +96,10 @@
   #weather {
     grid-column: 3;
     grid-row: 3;
+  }
+
+  .label p {
+    font-size: 100%;
   }
 
 
