--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -228,7 +228,7 @@ section h2 {
 }
 
 #banner {
-  background-image: url("../images/arlington_downtown.jpg");
+  background-image: url("../images/arlington_downtown-400w.jpg");
   background-size: cover;
   background-position: center;
   height: 300px;
@@ -256,6 +256,14 @@ section h2 {
   margin: auto;
 }
 
+#call-action img {
+  width: 100%;
+  height: 100%;
+  max-height: 300px;
+  position: relative;
+  margin: 0;
+}
+
 
 /* ----- SHOWCASE SECTION ----- */
 
@@ -263,11 +271,13 @@ section h2 {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto 1fr;
-  background-image: url("../images/3fingers.png");
+  background-image: url("../images/3fingers-400w.jpg");
   background-size: cover;
   background-position: center;
   padding-bottom: 20px;
 }
+
+
 
 #showcase h3 {
   grid-column: 1/4;
@@ -277,7 +287,7 @@ section h2 {
 #showcase div {
   margin: 10px;
   padding: 8px;
-  background-color: whitesmoke;
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 #showcase h4 {
@@ -302,7 +312,7 @@ section h2 {
 /* ----- JOIN-NOW SECTION ----- */
 
 #join-now {
-  background-image: url("../images/street_sign.jpg");
+  background-image: url("../images/street_sign-400w.jpeg");
   background-size: cover;
   background-position: center;
   height: 300px;
@@ -316,7 +326,7 @@ section h2 {
 /* ----- EVENTS SECTION ----- */
 
 #events {
-  background-image: url("../images/marysville.jpg");
+  background-image: url("../images/marysville-400w.jpeg");
   background-size: cover;
   padding: 0 0 15px;
 }
