--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -27,7 +27,7 @@ body {
   margin: 0;
 }
 
-h1, h2, h3, h5, h6, a, button {
+h1, h2, h3, h5, h6, a, button, .heading {
   font-family: 'Josefin Sans', sans-serif;
 }
 
@@ -190,23 +190,25 @@ nav ul li a {
 }
 
 section {
-  margin-bottom: 2px;
-  background-color: #ccc;
-  height: auto;
+  margin: 5px 1vw;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: var(--darkblue);
 }
 
 section h3 {
-  margin: 0;
-  padding: 30px 0 5px;
+  margin: 0 10px;
+  padding: 25px 0 5px;
   font-size: 120%;
-  border-bottom: 2px solid var(--darkblue);
-  background-color: whitesmoke;
+  border-bottom: 2px solid whitesmoke;
+  color: whitesmoke;
   text-align: center;
 }
 
 section h2 {
   text-align: center;
 }
+
 
 /* ----- BANNER SECTION ----- */
 
@@ -233,6 +235,14 @@ section h2 {
   background-position: center;
   height: 300px;
   z-index: 1;
+  margin: 0;
+  border-radius: 0 0 10px 0;
+}
+
+#hero {
+  position: relative;
+  z-index: 0;
+  width: 100%;
 }
 
 #banner h1 {
@@ -250,18 +260,36 @@ section h2 {
   top: 280px;
 }
 
-/* ----- CALL TO ACTION SECTION ----- */
+/* ----- NEWS SECTION ----- */
 
-#call-action h2 {
-  margin: auto;
+#news {
+  display: grid;
+  grid-template-columns: 1fr;
+  padding: 20px;
 }
 
-#call-action img {
-  width: 100%;
-  height: 100%;
-  max-height: 300px;
-  position: relative;
+#news h2 {
+  margin: auto;
+  color: white
+}
+
+#news h4,
+#news p {
+  color: whitesmoke;
+  border-right: 1px solid whitesmoke;
+  border-left: 1px solid whitesmoke;
   margin: 0;
+  text-align: center;
+}
+
+#news h4 {
+  margin-top: 20px;
+  font-size: 120%;
+}
+
+#news p {
+  margin-bottom: 20px;
+  padding: 5px 20px;
 }
 
 
@@ -271,13 +299,10 @@ section h2 {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: auto 1fr;
-  background-image: url("../images/3fingers-400w.jpg");
   background-size: cover;
   background-position: center;
   padding-bottom: 20px;
 }
-
-
 
 #showcase h3 {
   grid-column: 1/4;
@@ -288,6 +313,7 @@ section h2 {
   margin: 10px;
   padding: 8px;
   background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 10px;
 }
 
 #showcase h4 {
@@ -315,7 +341,8 @@ section h2 {
   background-image: url("../images/street_sign-400w.jpeg");
   background-size: cover;
   background-position: center;
-  height: 300px;
+  min-height: 300px;
+  border: 5px solid var(--darkblue)
 }
 
 #join2 {
@@ -326,21 +353,23 @@ section h2 {
 /* ----- EVENTS SECTION ----- */
 
 #events {
-  background-image: url("../images/marysville-400w.jpeg");
   background-size: cover;
-  padding: 0 0 15px;
+  padding: 0 5px 10px;
 }
 
 #events div {
-  margin: 10px;
+  margin: 20px 10px 10px;
+  padding: 20px 10px 10px;
   background-color: rgba(0,0,0,.8);
+  border-radius: 10px;
   display: grid;
   grid-template-rows: 1fr 1fr;
-  padding: 10px;
 }
 
 #events div:hover {
-  background-color: rgba(0,0,0,1);
+  background-color: black;
+  /* border: 1px solid white; */
+  box-shadow: 0 0 3px white;
   transition: ease 0.3s;
 }
 
@@ -371,10 +400,11 @@ section h2 {
 
 #weather {
   background-color: var(--darkblue);
-  height: 300px;
+  min-height: 300px;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 60px 2fr 1fr 1fr;
+  grid-template-rows: 60px auto auto auto;
+  padding: 2px;
 }
 
 #weather h2 {
@@ -491,7 +521,6 @@ footer {
   }
 
   #showcase {
-    height: auto;
     grid-template-columns: 1fr;
   }
 
