--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -37,24 +37,21 @@
   
   /* ----- MAIN STYLING ----- */
 
-  #banner { background-image: url("../images/arlington_downtown-1000w.jpg"); }
-  #showcase { background-image: url("../images/3fingers-1000w.png"); }
-  #join-now { background-image: url("../images/street_sign-1000w.jpg"); }
-  #events { background-image: url("../images/marysville-1000w.jpg"); }
 
   main {
     grid-template-columns: 2fr 3fr 2fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr auto;
   }
 
   section {
-    margin: 2px;
-    height: auto;
+    margin: 5px;
+    border-radius: 10px;
   }
 
   #banner {
     grid-column: 1/3;
     grid-row: 1;
+    margin-right: 5px;
   }
 
   #join {
@@ -73,7 +70,7 @@
   #bus2 { grid-row: 3; }
   #bus3 { grid-row: 4; }
 
-  #call-action {
+  #news {
     grid-column: 2;
     grid-row: 2;
   }
@@ -85,6 +82,9 @@
     grid-template-rows: 60px 1fr 1fr 1fr;
   }
 
+  #events h3 {
+    grid-column: 1/3;
+  }
 
   #event1 { grid-column: 1; grid-row: 2; }
   #event2 { grid-column: 2; grid-row: 2; }
@@ -96,11 +96,14 @@
   #join-now {
     grid-column: 2;
     grid-row: 3;
+    background-image: url("../images/street_sign-1000w.jpg");
   }
 
   #weather {
     grid-column: 3;
     grid-row: 3;
+    padding: 10px;
+    margin-left: 5px;
   }
 
   .label p {
