--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -58,16 +58,19 @@
   }
 
   #banner { grid-column: 1/3; grid-row: 1; }
-  #call-action { grid-column: 1/3; grid-row: 2; }
+  #news { grid-column: 1/3; grid-row: 2; }
   #showcase { grid-column: 1/3; grid-row: 3; }
   #join-now { grid-column: 1; grid-row: 4; margin-right: 2px;}
   #weather { grid-column: 2; grid-row: 4; }
   #events { grid-column: 1/3; grid-row: 5; }
 
-  #banner { background-image: url("../images/arlington_downtown-700w.jpg"); }
-  #showcase { background-image: url("../images/3fingers-700w.jpg"); }
-  #join-now { background-image: url("../images/street_sign-700w.jpeg"); }
-  #events { background-image: url("../images/marysville-700w.jpeg"); }
+  #join-now {
+    background-image: url("../images/street_sign-700w.jpeg");
+  }
+
+  #banner {
+    background-image: url("../images/arlington_downtown-1000w.jpg");
+  }
 
   #banner h1 {
     font-size: 2rem;
@@ -99,10 +102,19 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 60px 1fr 1fr;
-    padding: 0 0 10px;
+    gap: 15px;
+    padding: 10px;
+  }
+
+  #events div {
+    margin: 0;
   }
 
   #events h3 { grid-column: 1/4; grid-row: 1; }
+
+  #weather {
+    margin-left: 0;
+  }
 
 
   /* ----- FOOTER STYLING ----- */
