--- a/chamber/css/base.css
+++ b/chamber/css/base.css
@@ -15,9 +15,6 @@
 }
 
 
-
-/* ----- ----- ----- ----- HEADER STYLING ----- ----- ----- ----- */
-
 html {
   background-color: whitesmoke;
   padding: 0;
@@ -35,16 +32,21 @@ p, h4 {
   font-family: 'Heebo', sans-serif;
 }
 
+h2 {
+  margin: 0;
+}
+
+
+/* ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- */
+/* ----- ----- ----- ----- HEADER STYLING ----- ----- ----- ----- */
+/* ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- */
+
 header {
   width: 100%;
   margin: 0;
   display: grid;
   grid-template-columns: 140px 3% 1fr;
   grid-template-rows: auto;
-}
-
-h2 {
-  margin: 0;
 }
 
 #nav-top {
@@ -180,14 +182,107 @@ nav ul li a {
 .large { display: none; }
 
 
+/* ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- */
+/* ----- ----- ----- ----- FOOTER STYLING ----- ----- ----- ----- */
+/* ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- */
 
-/* ----- ----- ----- ----- MAIN BODY STYLING ----- ----- ----- ----- */
+footer {
+  background-color: whitesmoke;
+}
+
+#main-footer {
+  margin: 1rem;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: auto;
+}
+
+#logo-footer {
+  width: 140px;
+  margin: auto;
+}
+
+#first-footer {
+  margin: auto;
+  text-align: center;
+}
+
+#second-footer {
+  margin: auto;
+  text-align: center;
+}
+
+#base-footer {
+  width: 100%;
+  padding: .5rem;
+  background-color: var(--darkblue);
+  text-align: center;
+}
+
+#base-footer p {
+  color: white;
+}
+
+
+
+@media only screen and (max-width: 350px) {
+
+  #logo {
+    max-width: 80px;
+  }
+
+  header, #nav-top {
+    grid-template-columns: 90px 1% 1fr;
+  }
+
+  nav ul li a {
+    font-size: 100%;
+  }
+
+  #showcase {
+    grid-template-columns: 1fr;
+  }
+
+  #bus2, #bus3,
+  #event3, #event4, #event5, #event6 {
+    display: none
+  }
+
+  .more {
+    display: inherit;
+    position: relative;
+    float: right;
+    bottom: 0;
+    margin: 10px;
+  }
+
+  #weather {
+    grid-template-rows: 60px 1fr 1fr 1fr;
+  }
+
+  #weather p {
+    font-size: 5vw;
+  }
+
+  #temp {
+    font-size: 12vw;
+  }
+
+  #temp_label {
+    font-size: 8vw;
+  }
+
+  #discover {
+    padding: 0;
+  }
+
+}
+
+/* ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- */
+/* ----- ----- ----- ----- MAIN PAGE STYLING ----- ----- ----- ----- */
+/* ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- */
 
 /* ----- GENERAL ----- */
-
-#main {
-  margin: 0;
-}
 
 section {
   margin: 5px 1vw;
@@ -388,13 +483,6 @@ section h2 {
   grid-row: 2;
 }
 
-/* 
-#event1 { grid-column: 1; grid-row: 2; }
-#event2 { grid-column: 2; grid-row: 2; }
-#event3 { grid-column: 3; grid-row: 2; }
-#event4 { grid-column: 1; grid-row: 3; }
-#event5 { grid-column: 2; grid-row: 3; }
-#event6 { grid-column: 3; grid-row: 3; } */
 
 /* ----- WEATHER SECTION ----- */
 
@@ -464,93 +552,53 @@ section h2 {
 }
 
 
+/* ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- */
+/* ----- ----- ----- ----- DISCOVER PAGE STYLING ----- ----- ----- ----- */
+/* ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- */
 
-/* ----- ----- ----- ----- FOOTER STYLING ----- ----- ----- ----- */
-
-footer {
-  background-color: whitesmoke;
+#discover {
+  padding-top: 5rem;
+  transition: ease 0.1s;
 }
 
-#main-footer {
-  margin: 1rem;
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto;
+#discover h1 {
+  margin: 2rem;
+  padding: 20px 10px;
+  border-left: 5px solid var(--darkblue);
 }
 
-#logo-footer {
-  width: 140px;
-  margin: auto;
+#discover h3 {
+  font-size: 200%;
 }
 
-#first-footer {
-  margin: auto;
-  text-align: center;
+.photogrid {
+  display: block;
 }
 
-#second-footer {
-  margin: auto;
-  text-align: center;
+.gallery {
+  margin: 5vw;
 }
 
-#base-footer {
+.gallery picture {
+  margin: 0;
+}
+
+.gallery img {
   width: 100%;
-  padding: .5rem;
-  background-color: var(--darkblue);
+  height: auto;
+}
+
+.description {
+  padding: 15px;
   text-align: center;
 }
 
-#base-footer p {
-  color: white;
+.last-visit {
+  background-color: var(--darkblue);
+  padding: 6px;
 }
 
-
-
-@media only screen and (max-width: 350px) {
-
-  #logo {
-    max-width: 80px;
-  }
-
-  header, #nav-top {
-    grid-template-columns: 90px 1% 1fr;
-  }
-
-  nav ul li a {
-    font-size: 100%;
-  }
-
-  #showcase {
-    grid-template-columns: 1fr;
-  }
-
-  #bus2, #bus3,
-  #event3, #event4, #event5, #event6 {
-    display: none
-  }
-
-  .more {
-    display: inherit;
-    position: relative;
-    float: right;
-    bottom: 0;
-    margin: 10px;
-  }
-
-  #weather {
-    grid-template-rows: 60px 1fr 1fr 1fr;
-  }
-
-  #weather p {
-    font-size: 5vw;
-  }
-
-  #temp {
-    font-size: 12vw;
-  }
-
-  #temp_label {
-    font-size: 8vw;
-  }
-
+.last-visit p {
+  color: whitesmoke;
+  text-align: center;
 }
