--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -51,7 +51,7 @@
 
   /* ----- MAIN STYLING ----- */
 
-  main {
+  #index {
     display: grid;
     grid-template-columns: 3fr 2fr;
     grid-template-rows: auto;
@@ -127,6 +127,45 @@
   #first-footer {
     margin-left: 1rem;
     text-align: start;
+  }
+
+  /* ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- */
+  /* ----- ----- ----- ----- DISCOVER PAGE STYLING ----- ----- ----- ----- */
+  /* ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- */
+
+  #discover {
+    padding-top: 8rem;
+  }
+
+  #discover h1 {
+    margin-left: 6vw;
+  }
+
+  .gallery {
+    position: relative;
+    text-align: center;
+    max-width: 650px;
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+  }
+
+  .description {
+    position: absolute;
+    bottom: 0;
+    z-index: 1;
+    -webkit-transition: .3s ease-in-out;
+    transition: .3s ease-in-out;
+    opacity: 0;
+    background-color: rgba(255, 255, 255, 0.8);
+    overflow: hidden;
+  }
+
+  .gallery:hover {
+    max-width: 700px;
+  }
+
+  .gallery:hover .description {
+    opacity: 1;
   }
 
 
