--- a/lesson8/tablebuild.css
+++ b/lesson8/tablebuild.css
@@ -64,13 +64,8 @@ tfoot tr {
   }
 
   tbody tr th:first-child {
-    writing-mode:tb-rl;
-    -webkit-transform:rotate(90deg);
-    -moz-transform:rotate(90deg);
-    -o-transform: rotate(90deg);
-    -ms-transform:rotate(90deg);
-    transform: rotate(180deg);
-    white-space:nowrap;
+    writing-mode: vertical-rl;
+    white-space: nowrap;
   }
 
 }
