--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -134,5 +134,12 @@
       max-width: 800px;
     }
 
+    /* ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- */
+    /* ----- ----- ----- ----- JOIN PAGE STYLING ----- ----- ----- ----- */
+    /* ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- */
+
+    #joinpage {
+      width: 80%;
+    }
 
   } /*end large */
