--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -168,13 +168,55 @@
     opacity: 1;
   }
 
+  #joinpage {
+    margin-top: 8rem;
+  }
 
 } /*end medium */
+
+@media only screen and (min-width: 40rem) {
+
+  /* ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- */
+  /* ----- ----- ----- ----- JOIN PAGE STYLING ----- ----- ----- ----- */
+  /* ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- */
+
+  
+
+}
 
 @media only screen and (min-width: 47rem) {
 
   #banner h1 {
     padding-top: 240px;
+  }
+
+  #joinpage {
+    margin: 8rem auto;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto 50px auto auto;
+  }
+
+  #joinpage h1 {
+    grid-column: 1/3;
+    grid-row: 1;
+    margin: auto;
+  }
+
+  .membership {
+    display: block;
+    grid-column: 2;
+    grid-row: 3/5;
+  }
+
+  .membership div {
+    margin-top: 0;
+    margin-bottom: 1.5rem;
+  }
+
+  #joinpage form {
+    grid-column: 1;
+    grid-row: 3;
   }
 
 }
