--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -65,11 +65,11 @@
   #events { grid-column: 1/3; grid-row: 5; }
 
   #join-now {
-    background-image: url("../images/street_sign-700w.jpeg");
+    background-image: url("../images/index/street_sign-700w.jpeg");
   }
 
   #banner {
-    background-image: url("../images/arlington_downtown-1000w.jpg");
+    background-image: url("../images/index/arlington_downtown-1000w.jpg");
   }
 
   #banner h1 {
@@ -172,17 +172,22 @@
     margin-top: 8rem;
   }
 
+
+  /* ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- */
+  /* ----- ----- ----- ----- DIRECTORY PAGE STYLING ----- ----- ----- ----- */
+  /* ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- */
+
+  .directoryTitle {
+    margin: 9rem auto 2rem;
+  }
+
+  .cards {
+    margin: auto;
+  }
+
+
 } /*end medium */
 
-@media only screen and (min-width: 40rem) {
-
-  /* ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- */
-  /* ----- ----- ----- ----- JOIN PAGE STYLING ----- ----- ----- ----- */
-  /* ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- ----- */
-
-  
-
-}
 
 @media only screen and (min-width: 47rem) {
 
