--- a/chamber/css/large.css
+++ b/chamber/css/large.css
@@ -26,8 +26,9 @@
   }
 
   #nav-top nav ul {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    width: 100%;
+    display: flex;
+    /* grid-template-columns: repeat(7, 1fr); */
   }
 
   #nav-top nav ul li {
