--- a/temple-site/css/site-plan.css
+++ b/temple-site/css/site-plan.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&family=Playfair+Display&display=swap');
+
 /* ------------- General Styling ------------- */
 
 html {
@@ -5,15 +7,15 @@ html {
 }
 
 body {
-  background-color: whitesmoke;
+  background-color: white;
   max-width: 32rem;
   padding: 3rem;
   margin: 1rem auto;
 }
 
-h1, h3, h5 {
+h1, h2, h3, h5 {
   padding-top: 1rem;
-  /* font-family */
+  font-family: 'Playfair Display', serif;
 }
 
 h1, h2 {
@@ -21,19 +23,47 @@ h1, h2 {
   margin: 0;
 }
 
+
+
 h3 {
   border-bottom: 1px solid black;
 }
 
+h5 {
+  font-size: 125%;
+}
+
+h5, p{
+  padding: 0 2rem;
+}
+
 p, a, span {
   margin: 0;
-  /* font-family */
+  font-family: 'Noto Sans', sans-serif;
 }
+
+/* ------------- Color Scheme Styling ------------- */
 
 div.color {
   padding: 1rem;
   display: inline;
   border: 1px solid black;
+}
+
+#color1 {
+  background-color: #ffac81;
+}
+#color2 {
+  background-color: #ff928b;
+}
+#color3 {
+  background-color: #fec3a6;
+}
+#color4 {
+  background-color: #efe9ae;
+}
+#color5 {
+  background-color: #cdeac0;
 }
 
 /* ------------- Site Map Styling ------------- */
@@ -91,38 +121,60 @@ div.color {
   grid-area: top;
   border-left: 1px solid;
 }
-
 .left {
   grid-area: left;
   border-top: 1px solid;
   border-left: 1px solid;
 }
-
 .right {
   grid-area: right;
   border-top: 1px solid;
   border-right: 1px solid;
 }
-
 .bottom {
   grid-area: bottom;
   border-top: 1px solid;
   border-left: 1px solid;
 }
-
 .top2 {
   grid-area: top2;
   border-left: 1px solid;
 }
-
 .left2 {
   grid-area: left2;
   border-top: 1px solid;
   border-left: 1px solid;
 }
-
 .right2 {
   grid-area: right2;
   border-top: 1px solid;
   border-right: 1px solid;
+}
+
+/* ------------- Wireframe Styling ------------- */
+
+img {
+  max-width: 100%;
+  margin: auto;
+}
+
+#wireframes {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  gap: 1rem;
+}
+
+.small {
+  grid-column: 1;
+  grid-row: 1;
+}
+
+.med {
+  grid-column: 2;
+  grid-row: 1;
+}
+
+.large {
+  grid-column: 1/3;
+  grid-row: 2;
 }
