--- a/temple-site/css/base.css
+++ b/temple-site/css/base.css
@@ -652,33 +652,52 @@ hr {
 
 #temple-grid {
   display: grid;
-  grid-template-columns: 1fr;
-  gap: 1rem;
+  grid-template-columns: 100%;
+  gap: 2rem;
 }
 
-#temple-grid div {
+.card {
   margin: auto;
   padding: 1rem;
   border: 2px solid black;
-  border-radius: 20px;
   background-color: var(--peach);
-  max-width: 400px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 2rem;
 }
 
 #temple-grid img {
-  width: 90%;
-  margin-bottom: 1rem;
+  width: 100%;
+  border-radius: 15px;
+  margin: auto;
 }
 
 #temple-grid h3 {
   font-size: 200%;
 }
 
-#temple-grid h4,
+#temple-grid h4 {
+  font-size: 150%;
+  margin: 1rem;
+}
+
 #temple-grid p {
   margin: .5rem;
+}
+
+#temple-grid h4,
+#temple-grid p {
+  text-align: center;
+}
+
+.contactDiv {
+  background-color: whitesmoke;
+  border: 3px solid black;
+  border-radius: 15px;
+  padding: 2rem;
+}
+
+.heart {
+  position: relative;
+  top: 0;
 }
