--- a/temple-site/css/medium.css
+++ b/temple-site/css/medium.css
@@ -42,6 +42,7 @@
   .grid-2 {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    gap: 1rem;
   }
 
   .grid-2 div {
@@ -127,6 +128,22 @@
     border-radius: 20px;
   }
 
+  ul.big li {
+    font-size: 150%;
+  }
+
+  #missionary .grid-3 div {
+    margin: 0;
+    min-height: 0;
+  }
+
+  .mis-form {
+    border-radius: 20px;
+  }
+
+  .rec-hero {
+    margin-top: -45px;
+  }
 
 
 }
