--- a/temple-site/css/base.css
+++ b/temple-site/css/base.css
@@ -464,6 +464,10 @@ footer a {
   max-width: 100%;
 }
 
+iframe {
+  border: none;
+}
+
 
 /* ============= RESERVATIONS PAGE STYLING ============= */
 
